--- a/python-projects/Day20-25/webcam-photo-sharing/frontend.kv
+++ b/python-projects/Day20-25/webcam-photo-sharing/frontend.kv
@@ -13,10 +13,14 @@
             text: 'Start Camera'
             on_press: root.start() if root.ids.camera.play == False else root.stop()
             size_hint_y: 0.1
+            background_normal: 'images/normal.png'
+            background_down: 'images/down.png'
         Button:
             text: 'Capture'
             on_press: root.capture()
             size_hint_y: 0.1
+            background_normal: 'images/normal.png'
+            background_down: 'images/down.png'
 
 <ImageScreen>:
     GridLayout:
@@ -28,6 +32,8 @@
             text: 'Create Sharable Link'
             on_press: root.create_link()
             size_hint_y: 0.1
+            background_normal: 'images/normal.png'
+            background_down: 'images/down.png'
         Label:
             id: link
             text: ''
@@ -38,9 +44,13 @@
             Button:
                 text: 'Copy Link'
                 on_press: root.copy_link()
+                background_normal: 'images/normal.png'
+                background_down: 'images/down.png'
             Button:
                 text: 'Open Link'
                 on_press: root.open_link()
+                background_normal: 'images/normal.png'
+                background_down: 'images/down.png'                
 
 <RootWidget>:
     CameraScreen: 
