--- a/python-projects/Day20-25/webcam-photo-sharing/frontend.kv
+++ b/python-projects/Day20-25/webcam-photo-sharing/frontend.kv
@@ -8,6 +8,7 @@
             resolution: (640, 480)
             play: False
             size_hint_y: 0.8
+            opacity: 0
         Button:
             id: camera_button
             text: 'Start Camera'
@@ -53,6 +54,12 @@
                 background_down: 'images/down.png'                
 
 <RootWidget>:
+    canvas.before:
+        Color:
+            rgba: (0.239, 0.133, 0.427, 1)
+        Rectangle:
+            pos: self.pos
+            size: self.size
     CameraScreen: 
         id: camera_screen
         name: 'camera_screen'
