--- a/python-projects/Day32/templates/calories_form_page.html
+++ b/python-projects/Day32/templates/calories_form_page.html
@@ -10,21 +10,21 @@
 <p>Fill in the form and click the button to know how many calories you need!</p>
 <form action="/calories_form" method="post">
     <p>Let's get some info about you first.</p>
-    {{caloriesform.weight.label}} {{caloriesform.weight}}
+    {{calories_form.weight.label}} {{calories_form.weight}}
     <br>
-    {{caloriesform.height.label}} {{caloriesform.height}}
+    {{calories_form.height.label}} {{calories_form.height}}
     <br>
-    {{caloriesform.age.label}} {{caloriesform.age}}
+    {{calories_form.age.label}} {{calories_form.age}}
     <br>
     <hr>
     <p>Today's weather counts too. <br> Tell us where you are so we include today's temperature into the calculations.</p>
-    {{caloriesform.city.label}} {{caloriesform.city}}
+    {{calories_form.city.label}} {{calories_form.city}}
     <br>
-    {{caloriesform.country.label}} {{caloriesform.country}}
+    {{calories_form.country.label}} {{calories_form.country}}
     <br>
 
     <br>
-    {{caloriesform.button}}
+    {{calories_form.button}}
     <br>
     {% if result==True %}
     <h3>You need {{calories}} calories (kcal) today</h3>
